# OCR_Preprocess_ToTable

./: .gitignore  .pre-commit-config.yaml  First_Run.py  LICENSE  MANIFEST.in  Makefile  README.md  Second_Run.py  config.json  config_first.json  config_second.json  crop_to_table.py  deskew.py  detect_curved_lines.py  detect_edges.py  detect_lines.py  flake8_issues.txt  make.py  pyproject.toml  pytest.ini  reconstruct_table_fit.py  reconstruct_table_full.py  remove_marks.py  requirements-dev.txt  requirements.txt  run_stage1_initial_processing.py  run_stage2_refinement.py  setup.py  split_pages.py
.github/workflows/: ci.yml
configs/: CONFIG_GUIDE.md  PARAMETER_REFERENCE.md  README.md  stage1_config.json  stage1_default.json  stage2_config.json  stage2_default.json
data/debug/: .gitkeep
data/input/raw_images/: .gitkeep
data/input/test_images/: .gitkeep
data/output/: .gitkeep
docs/: API.md  API_REFERENCE.md  CLAUDE.md  DEBUG_MODE_GUIDE.md  DEBUG_MODE_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PARAMETER_REFERENCE.md  PARAMETER_TUNING_GUIDE.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  UNICODE_SETUP.md  V2_MIGRATION_GUIDE.md  enable_disable_steps.md
examples/: README.md  basic_usage.py  unicode_console_example.py
lines_images/: wang1_page_1_lines.json  wang1_page_2_lines.json  wang2_page_1_lines.json  wang2_page_2_lines.json
ocr/: config.py  pipeline.py  utils.py
roi_visualization/: test1_roi_coords.json  visualization_summary.json
scripts/: __init__.py  clean.bat  dev.bat  invoke-dev.ps1  manage-pipeline.ps1  run-pipeline.bat  run_complete.py  run_parallel.py  run_pipeline.py  run_stage1.py  run_stage2.py  setup.bat  setup.ps1  setup_unicode.bat  setup_unicode.ps1  test.bat
src/: __init__.py
src/core/: __init__.py  page_splitting.py
src/ocr_pipeline/: __init__.py  config.py  exceptions.py  memory_pipeline.py  parallel_pipeline.py  pipeline.py  processor_wrappers.py  stage1_processor.py  stage2_processor.py  utils.py  utils_optimized.py
src/ocr_pipeline/config/: __init__.py  default_stage1.yaml  default_stage2.yaml  loader.py  models.py
src/ocr_pipeline/processors/: __init__.py  base.py  binarize.py  deskew.py  image_io.py  margin_removal.py  margin_removal_conservative.py  mark_removal.py  page_split.py  stroke_enhancement.py  table_detection.py  table_processing.py  table_recovery.py  table_recovery_utils.py  tag_removal.py  vertical_strip_cutter.py  visualization.py
src/ocr_pipeline/utils/: __init__.py  console.py  environment.py  file_utils.py  image_utils.py  logging_utils.py  windows_utils.py
src/utils/: __init__.py  config_loader.py  file_utils.py  image_utils.py
table_fit_images/: wang1_page_1_fitted_cells.json  wang1_page_2_fitted_cells.json  wang2_page_1_fitted_cells.json  wang2_page_2_fitted_cells.json
table_images/: wang1_page_1_details.json  wang1_page_2_details.json  wang2_page_1_details.json  wang2_page_2_details.json
tests/: __init__.py  conftest.py  test_pipeline.py
tests/unit/: test_windows_utils.py
tools/: README.md  TUNING_GUIDE.md  __init__.py  check_results.py  compare_results.py  config_utils.py  copy_best_results.bat  debug_margin_analysis.py  output_manager.py  quick_start_tuning.py  run_tuned_pipeline.py  run_visualizations.py  setup_tuning.py  setup_tuning_windows.py  test_config_loading.py  tune_deskewing.py  tune_line_detection.py  tune_page_splitting.py  tune_roi_detection.py  tuning_progress.md  tuning_progress_windows.md  visualize_deskew.py  visualize_deskew_v2.py  visualize_margin_removal.py  visualize_margin_removal_bbox.py  visualize_margin_removal_fast.py  visualize_margin_removal_v2.py  visualize_mark_removal_v2.py  visualize_page_split.py  visualize_page_split_v2.py  visualize_pipeline.py  visualize_roi.py  visualize_table_crop.py  visualize_table_crop_v2.py  visualize_table_lines.py  visualize_table_lines_v2.py  visualize_table_structure_v2.py
visualization/: README.md  check_results.py  visualize_deskew.py  visualize_page_split.py  visualize_pipeline.py  visualize_roi.py  visualize_table_crop.py  visualize_table_lines.py
